tests/baselines/reference/numericIndexerConstraint.errors.txt
==== tests/cases/compiler/numericIndexerConstraint.ts (1 errors) ====
    class C {
        0: number;
        ~~~~~~~~~~
!!! error TS2170: All numerically named properties must be assignable to numeric indexer type 'RegExp':
!!! 	Type 'Number' is missing property 'exec' from type 'RegExp'.
        [x: number]: RegExp;
    }